# TechyMikul

./: .env.example  .gitignore  About_Me.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
app/: main.py
app/api/: __init__.py  admin.py  dashboard.py  notifications.py  opportunities.py  users.py  webhooks.py
app/bots/: base.py  discord_bot.py  telegram_bot.py  whatsapp_bot.py
app/core/: config.py  database.py
app/db/: models.py
app/schemas/: opportunity.py  user.py
app/services/: admin_service.py  notification_service.py  opportunity_service.py  user_service.py
app/utils/: bot_manager.py  i18n.py
frontend/: index.html
tests/: test_api.py  test_services.py
